--- a/Maui/SimpleWeather.Maui/Main/WeatherAQIPage.xaml
+++ b/Maui/SimpleWeather.Maui/Main/WeatherAQIPage.xaml
@@ -10,6 +10,7 @@
     xmlns:graphs="clr-namespace:SimpleWeather.NET.Controls.Graphs"
     xmlns:graphPanels="clr-namespace:SimpleWeather.Maui.Controls.Graphs"
     xmlns:controls="clr-namespace:SimpleWeather.Common.Controls;assembly=SimpleWeather.Common"
+    xmlns:commonVM="clr-namespace:SimpleWeather.Common.ViewModels;assembly=SimpleWeather.Common"
     xmlns:devices="clr-namespace:Microsoft.Maui.Devices;assembly=Microsoft.Maui.Essentials"
     xmlns:viewModels="clr-namespace:SimpleWeather.Maui.ViewModels"
     Title="{x:Static res_strings:Resources.label_airquality}"
@@ -53,8 +54,9 @@
         </Grid.RowDefinitions>
         <VerticalStackLayout Grid.Row="0">
             <localControls:ViewBox HeightRequest="48" HorizontalOptions="Start"
-                                   BindingContext="{Binding Source={x:Reference AQIPage}, Path=WNowViewModel}">
+                                   BindingContext="{x:Bind WNowViewModel}">
                 <Label Padding="16" FontSize="16" HorizontalTextAlignment="Start" HorizontalOptions="Start"
+                       x:DataType="commonVM:WeatherNowViewModel"
                        Text="{Binding Weather.Location, FallbackValue='New York, NY', Mode=OneWay}" />
             </localControls:ViewBox>
             <Rectangle Style="{DynamicResource AppBarBorderStyle}" />
@@ -69,7 +71,7 @@
                         Text="{x:Static res_strings:Resources.time_current}" />
                     <localControls:AQIForecastControl
                         x:Name="AQIndexControl"
-                        BindingContext="{Binding Source={x:Reference AQIPage}, Path='WNowViewModel.Weather.AirQuality', Mode=OneWay}" />
+                        BindingContext="{x:Bind WNowViewModel.Weather.AirQuality, Mode=OneWay}" />
                 </VerticalStackLayout>
                 <VerticalStackLayout
                     x:Name="AQIContainer"
