--- a/Maui/SimpleWeather.Maui/Preferences/Settings_Icons.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/Settings_Icons.xaml
@@ -20,7 +20,7 @@
                    Padding="0"
                    MinimumHeightRequest="0"
                    VerticalOptions="Start"
-                   IsVisible="{Binding Source={x:Reference LoadingRing}, Path=IsRunning, Converter={StaticResource inverseBoolConverter}}">
+                   IsVisible="{x:Bind LoadingRing.IsRunning, Converter={StaticResource inverseBoolConverter}}">
                 <VerticalStackLayout x:Name="IconRadioContainer" />
             </Frame>
         </ScrollView>
