--- a/Maui/SimpleWeather.Maui/Controls/MoonPhaseControl.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/MoonPhaseControl.xaml
@@ -5,11 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:commonControls="clr-namespace:SimpleWeather.Common.Controls;assembly=SimpleWeather.Common"
     xmlns:controls="clr-namespace:SimpleWeather.Maui.Controls"
-    xmlns:converters="clr-namespace:SimpleWeather.Maui.Converters"
-    xmlns:mrkup="clr-namespace:SimpleWeather.Maui.MarkupExtensions"
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
-    xmlns:sharedControls="clr-namespace:SimpleWeather.NET.Controls"
-    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:wicons="clr-namespace:SimpleWeather.Icons;assembly=SimpleWeather.Shared"
     x:DataType="commonControls:MoonPhaseViewModel"
     x:Name="Control"
@@ -42,7 +38,7 @@
             HorizontalOptions="Center"
             HorizontalScrollBarVisibility="Never"
             InputTransparent="True"
-            ItemsSource="{Binding Source={x:Reference Control}, Path=DataSet, Mode=OneWay}"
+            ItemsSource="{x:Bind DataSet, Mode=OneWay, DataType={x:Null}}"
             ItemsUpdatingScrollMode="KeepScrollOffset"
             HeightRequest="60"
             MaximumWidthRequest="488"
@@ -80,7 +76,7 @@
                 <controls:IconControl
                     x:Name="MoonriseIcon"
                     IconHeight="{OnIdiom Default=36, Phone=32}"
-                    IconWidth="{Binding Source={RelativeSource Mode=Self}, Path=IconHeight}"
+                    IconWidth="{OnIdiom Default=36, Phone=32}"
                     WeatherIcon="{x:Static wicons:WeatherIcons.MOONRISE}" />
                 <Label
                     x:Name="MoonriseText"
@@ -97,7 +93,7 @@
                 <controls:IconControl
                     x:Name="MoonsetIcon"
                     IconHeight="{OnIdiom Default=36, Phone=32}"
-                    IconWidth="{Binding Source={RelativeSource Mode=Self}, Path=IconHeight}"
+                    IconWidth="{OnIdiom Default=36, Phone=32}"
                     WeatherIcon="{x:Static wicons:WeatherIcons.MOONSET}" />
                 <Label
                     x:Name="MoonsetText"
