--- a/Maui/SimpleWeather.Maui/Location/LocationSearchPage.xaml
+++ b/Maui/SimpleWeather.Maui/Location/LocationSearchPage.xaml
@@ -7,18 +7,17 @@
     xmlns:controls="clr-namespace:SimpleWeather.Maui.Controls"
     xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
     xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
-    xmlns:local="clr-namespace:SimpleWeather.Maui.Controls"
+    xmlns:local="clr-namespace:SimpleWeather.Maui.Location"
     xmlns:m="http://compiledbindings.com/"
     xmlns:main="clr-namespace:SimpleWeather.Maui.Main"
     xmlns:maticons="clr-namespace:SimpleWeather.Maui.MaterialIcons"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:mx="http://compiledbindings.com/x"
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
-    xmlns:win="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.WindowsSpecific;assembly=Microsoft.Maui.Controls"
     x:DataType="commonVM:LocationSearchViewModel"
     BackgroundColor="{AppThemeBinding Light={StaticResource LightBackground},
                                       Dark={StaticResource DarkBackground}}"
-    BindingContext="{Binding Source={RelativeSource Mode=Self}, Path=LocationSearchViewModel}"
+    BindingContext="{x:Bind LocationSearchViewModel, DataType={x:Null}}"
     NavigationPage.HasBackButton="False"
     NavigationPage.HasNavigationBar="False"
     Shell.FlyoutItemIsVisible="False"
